--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.2.1-canary.2",
+    "next": "14.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.3.0",
+    "i18next": "^23.7.16",
+    "next-i18next": "15.2.0",
+    "react-i18next": "^14.0.0"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
